css show ensayos

--- a/public/stylesheets/movil.css
+++ b/public/stylesheets/movil.css
@@ -28,6 +28,18 @@
     }
 
 
+
+    /* ==== FORMATOS DE TEXTO ==============================================*/
+
+    .texto_tipo_1 {
+
+        color: #7fff00;                 /* verde claro */
+
+    }
+
+
+
+
     /* INICIO =============================================================== */
 
     #inicio {
