--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -5,34 +5,34 @@
 
 
 
-		<div class="col-md-6 col-sm-6">
+		<div class="col-md-6 col-sm-6 datos_cabeceras">
 
 			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_dcha">
 				<h5>Parte nº: </h5>
 			</div>
 			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_izda">
-				<h5><strong><%= quiz.id %></strong></h5>
+				<h5><%= quiz.id %></h5>
 			</div>
 
 			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_dcha">
 				<h5>Fecha: </h5>
 			</div>
 			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_izda">
-				<h5><strong><%= quiz.dia %>-<%= quiz.mes %>-<%= quiz.anio %></strong></h5>
+				<h5><%= quiz.dia %>-<%= quiz.mes %>-<%= quiz.anio %></h5>
 			</div>
 
 			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_dcha">
 				<h5>Usuario: </h5>
 			</div>
 			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_izda">
-				<h5><strong><%= quiz.UserName %></strong></h5>
+				<h5><%= quiz.UserName %></h5>
 			</div>
 
 			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_dcha">
 				<h5>Centro: </h5>
 			</div>
 			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_izda">
-				<h5><strong><%= quiz.centro %></strong></h5>
+				<h5><%= quiz.centro %></h5>
 			</div>
 
 		</div>
@@ -42,7 +42,7 @@
 
 	<div class="container comments">
 
-		<h4>Lecturas:</h4>
+		<h4 class="texto_tipo_3">Lecturas:</h4>
 
 		<br>
 
