--- a/views/user/_form.ejs
+++ b/views/user/_form.ejs
@@ -70,10 +70,11 @@
 	<div class="form-group text-center">
 		<ul class="tira_botones">
 			<li><a class="btn btn_gral btn_cancelar" href="/user">
-				<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancelar
+				<i class="fa fa-times texto_tipo_5" alt=""></i> Cancelar
 			</a></li>
+
 			<li><button class="btn btn_gral" type="submit" id="grabar" value="Salvar">
-				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Grabar
+				<i class="fa fa-check texto_tipo_4" alt=""></i> Grabar
 			</button></li>
 		</ul>
 	</div>
