--- a/views/contadores/_form.ejs
+++ b/views/contadores/_form.ejs
@@ -100,13 +100,12 @@
 
 
         <li><a class="btn btn_gral btn_cancelar" href="/contadores">
-            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancelar
-        </a></li>
+			<i class="fa fa-times texto_tipo_5" alt=""></i> Cancelar
+		</a></li>
 
-
-        <li><button class="btn btn_gral" type="submit" id="grabar" value="Salvar">
-            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Grabar
-        </button></li>
+		<li><button class="btn btn_gral" type="submit" id="grabar" value="Salvar">
+			<i class="fa fa-check texto_tipo_4" alt=""></i> Grabar
+		</button></li>
 
     </ul>
 
