--- a/views/siloes/_form.ejs
+++ b/views/siloes/_form.ejs
@@ -52,11 +52,11 @@
 	<ul class="tira_botones">
 
 		<li><a class="btn btn_gral btn_cancelar" href="/siloes">
-			<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancelar
+			<i class="fa fa-times texto_tipo_5" alt=""></i> Cancelar
 		</a></li>
 
 		<li><button class="btn btn_gral" type="submit" id="grabar" value="Salvar">
-			<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Grabar
+			<i class="fa fa-check texto_tipo_4" alt=""></i> Grabar
 		</button></li>
 
 	</ul>
