--- a/views/vasos/_form.ejs
+++ b/views/vasos/_form.ejs
@@ -648,12 +648,13 @@
             <div class="col-md-12">
                 <div class="form-group text-center">
             		<ul class="tira_botones">
-            			<li><a class="btn btn_gral btn_cancelar" href="/vasos">
-            				<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancelar
-            			</a></li>
-            			<li><button class="btn btn_gral" type="submit" id="grabar" value="Salvar">
-            				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Grabar
-            			</button></li>
+                        <li><a class="btn btn_gral btn_cancelar" href="/vasos">
+                			<i class="fa fa-times texto_tipo_5" alt=""></i> Cancelar
+                		</a></li>
+
+                		<li><button class="btn btn_gral" type="submit" id="grabar" value="Salvar">
+                			<i class="fa fa-check texto_tipo_4" alt=""></i> Grabar
+                		</button></li>
             		</ul>
             	</div>
             </div>
