--- a/views/criterios/_form.ejs
+++ b/views/criterios/_form.ejs
@@ -39,7 +39,7 @@
                 <input type="number" min="0" class="form-control" id="min" name="criterio[min]" value="<%= criterio.min %>" step="0.1"/>
             </div>
         </div>
-        
+
 
     </div>
 
@@ -48,10 +48,10 @@
     <div class="form-group text-center">
         <ul class="tira_botones">
             <li><a class="btn btn_gral btn_cancelar" href="/contadores/<%= contador.id %>">
-                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancelar
+                <i class="fa fa-times texto_tipo_5" alt=""></i> Cancelar
             </a></li>
             <li><button class="btn btn_gral" type="submit" id="grabar" value="Salvar">
-                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Grabar
+                <i class="fa fa-check texto_tipo_4" alt=""></i> Grabar
             </button></li>
         </ul>
     </div>
