--- a/views/siloes/show.ejs
+++ b/views/siloes/show.ejs
@@ -768,11 +768,28 @@
 											</div>
 
 
-											<div class="container-fluid">
+											<!-- <div class="container-fluid">
 
 												<button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Confirmar</button>
 
-											</div>
+											</div> -->
+
+											<div class="col-md-12">
+								                <div class="form-group text-center">
+								            		<ul class="tira_botones">
+
+								                        <li><a class="btn btn_gral btn_cancelar" href="/siloes/<%= siloe.id %>">
+								                			<i class="fa fa-times texto_tipo_5" alt=""></i> Cancelar
+								                		</a></li>
+
+								                		<li><button class="btn btn_gral" type="submit" id="grabar" value="Salvar">
+								                			<i class="fa fa-check texto_tipo_4" alt=""></i> Grabar
+								                		</button></li>
+
+								            		</ul>
+								            	</div>
+								            </div>
+
 
 
 										</form>
