css show lecturas

--- a/public/stylesheets/movil.css
+++ b/public/stylesheets/movil.css
@@ -224,10 +224,10 @@
 
     .comment-panel {						/* estilo de cada lectura */
 
+        margin-bottom: 0px;
+        padding-bottom: 0px;
 
-/*        color: #fff;
-		background-color: 	rgba(0, 0, 0, 0.8);
-		border: 		1px solid #D8D8D8; */
+
 	}
 
 
