--- a/views/contadores/show.ejs
+++ b/views/contadores/show.ejs
@@ -40,7 +40,7 @@
 	<div class="container" id="panel_criterios">
 
 		<br>
-		<h4 class="texto_tipo_3">Criterios:</h4>
+		<h4 class="text-center texto_tipo_3">Criterios</h4>
 
 		<div class="panel">
 
