--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -73,13 +73,40 @@
 
 		<div class="container-fluid">
 
+
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-inicio-items">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
+
+
+
+				<div class="row" style="margin-right:0px">
+
+					<div class="col-xs-5 ocultar_pc">
+						<span class="texto_navbar_movil">Patrocinador: </span><br>
+						<img class="logo_movil " src="/images/logos/logo_piscinas7islas_movil.jpg" alt="">
+					</div>
+
+
+					<div class="col-xs-5 ocultar_pc">
+						<span class="texto_navbar_movil">Desarrollador:</span><br>
+						<small>cosilsCompany, Inc.</small>
+					</div>
+
+
+
+					<div class="col-xs-2">
+
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-inicio-items">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+
+					</div>
+
+				</div>
+
+
 
 			</div>
 
@@ -164,7 +191,41 @@
 	</div>
 
 
+	<!-- PIE =================================================================================== -->
 
+	<div class="footer ocultar_movil" id="pie">
+
+
+		<h6>&copy; 2017 cosilsCompany, Inc.
+
+			&nbsp;
+			&middot;
+			&nbsp;
+
+			<a
+				data-toggle="modal"
+				data-target="#lopd-modal">Política de privacidad
+			</a>
+
+			&nbsp;
+			&middot;
+			&nbsp;
+
+			<a
+				data-toggle="modal"
+				data-target="#cookies-modal">Política de cookies
+			</a>
+
+			&nbsp;
+			&middot;
+			&nbsp;
+
+			Patrocinado por: <img src="/images/logos/logo_piscinas7islas.jpg" alt="">
+
+		</h6>
+
+
+	</div>
 
 
 
