--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -47,13 +47,7 @@
     }
 
 
-    .navbar-toggle {									/* estilos boton toggle del menu-inicio */
-		width: 47px;
-		height: 46px;
-        padding: 5px 5px 5px 12px;
-		background-color: rgba(0, 0, 0, 1);
-		top: 0px;
-	}
+
 
 
     .navbar-right {
@@ -115,12 +109,23 @@
         }
 
 
-
+        .navbar-toggle {									/* estilos boton toggle del menu-inicio */
+    		width: 47px;
+    		height: 46px;
+            margin-right: 0px;
+            padding: 5px 5px 5px 12px;
+    		background-color: rgba(0, 0, 0, 1);
+    		top: 0px;
+    	}
 
 
         .navbar.navbar-inverse {
-            /*position: absolute;*/
-            /*background: url(/images/logos/logo_7islas.jpg) no-repeat top center;*/
+            position: absolute;
+            /*background: rgba(0, 0, 0, 1);*/
+
+            /*background: url(/images/logos/logo_piscinas7islas_movil.jpg) no-repeat top center;*/
+
+
             border-radius: 5px;
             background: rgba(76,76,76,1);
             background: -moz-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(102,102,102,1) 0%, rgba(89,89,89,1) 2%, rgba(71,71,71,1) 18%, rgba(44,44,44,1) 28%, rgba(0,0,0,1) 47%, rgba(19,19,19,1) 100%);
@@ -142,17 +147,32 @@
 
         .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
             /*background-color: rgba(0, 0, 0, 1);*/
-            /*background: rgba(76,76,76,1);
+            background: rgba(76,76,76,1);
             background: -moz-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(102,102,102,1) 0%, rgba(89,89,89,1) 2%, rgba(71,71,71,1) 18%, rgba(44,44,44,1) 28%, rgba(0,0,0,1) 47%, rgba(19,19,19,1) 100%);
             background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(76,76,76,1)), color-stop(0%, rgba(102,102,102,1)), color-stop(2%, rgba(89,89,89,1)), color-stop(18%, rgba(71,71,71,1)), color-stop(28%, rgba(44,44,44,1)), color-stop(47%, rgba(0,0,0,1)), color-stop(100%, rgba(19,19,19,1)));
             background: -webkit-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(102,102,102,1) 0%, rgba(89,89,89,1) 2%, rgba(71,71,71,1) 18%, rgba(44,44,44,1) 28%, rgba(0,0,0,1) 47%, rgba(19,19,19,1) 100%);
             background: -o-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(102,102,102,1) 0%, rgba(89,89,89,1) 2%, rgba(71,71,71,1) 18%, rgba(44,44,44,1) 28%, rgba(0,0,0,1) 47%, rgba(19,19,19,1) 100%);
             background: -ms-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(102,102,102,1) 0%, rgba(89,89,89,1) 2%, rgba(71,71,71,1) 18%, rgba(44,44,44,1) 28%, rgba(0,0,0,1) 47%, rgba(19,19,19,1) 100%);
             background: linear-gradient(to bottom, rgba(76,76,76,1) 0%, rgba(102,102,102,1) 0%, rgba(89,89,89,1) 2%, rgba(71,71,71,1) 18%, rgba(44,44,44,1) 28%, rgba(0,0,0,1) 47%, rgba(19,19,19,1) 100%);
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313', GradientType=0 );*/
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313', GradientType=0 );
         }
 
 
+        #menu-inicio .logo_movil {
+
+            width: 80px;
+            height: 30px;
+            margin-left: 20px;
+            margin-top: 0px;
+            margin-bottom: 7px;
+
+        }
+
+        .texto_navbar_movil {
+
+            margin-left: 20px;
+            font-size: 8px;
+        }
 
 
 
