--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -82,7 +82,9 @@
 
 					<div class="col-xs-5 ocultar_pc">
 						<span class="texto_navbar_movil">Patrocinador: </span><br>
-						<img class="logo_movil " src="/images/logos/logo_piscinas7islas_movil.jpg" alt="">
+						<a href="http://www.piscinas7islas.com/" target="_blank">
+							<img class="logo_movil " src="/images/logos/logo_piscinas7islas_movil.jpg" alt="">
+						</a>
 					</div>
 
 
@@ -191,40 +193,35 @@
 	</div>
 
 
-	<!-- PIE =================================================================================== -->
+
+
+
+	<!-- PIEs =================================================================================== -->
+
+	<!-- <div class="footer ocultar_movil" id="sub_pie"></div>
+	<div class="footer ocultar_movil" id="mini_pie"></div> -->
 
 	<div class="footer ocultar_movil" id="pie">
-
-
 		<h6>&copy; 2017 cosilsCompany, Inc.
-
 			&nbsp;
 			&middot;
 			&nbsp;
-
 			<a
 				data-toggle="modal"
 				data-target="#lopd-modal">Política de privacidad
 			</a>
-
 			&nbsp;
 			&middot;
 			&nbsp;
-
 			<a
 				data-toggle="modal"
 				data-target="#cookies-modal">Política de cookies
 			</a>
-
 			&nbsp;
 			&middot;
 			&nbsp;
-
-			Patrocinado por: <img src="/images/logos/logo_piscinas7islas.jpg" alt="">
-
+			Patrocinado por: <a href="http://www.piscinas7islas.com/" target="_blank"><img src="/images/logos/logo_piscinas7islas.jpg" alt=""></a>
 		</h6>
-
-
 	</div>
 
 
