--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -73,42 +73,32 @@
 
 		<div class="container-fluid">
 
-
 			<div class="navbar-header">
-
-
 
 				<div class="row" style="margin-right:0px">
 
+					<!-- PARA NAVBAR MOVIL -->
 					<div class="col-xs-5 ocultar_pc">
 						<span class="texto_navbar_movil">Patrocinador: </span><br>
 						<a href="http://www.piscinas7islas.com/" target="_blank">
 							<img class="logo_movil " src="/images/logos/logo_piscinas7islas_movil.jpg" alt="">
 						</a>
 					</div>
-
-
 					<div class="col-xs-5 ocultar_pc">
 						<span class="texto_navbar_movil">Desarrollador:</span><br>
 						<small>cosilsCompany, Inc.</small>
 					</div>
 
-
-
 					<div class="col-xs-2">
-
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-inicio-items">
 							<span class="sr-only">Toggle navigation</span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-
 					</div>
 
 				</div>
-
-
 
 			</div>
 
@@ -196,6 +186,15 @@
 
 
 
+	<!-- BOTON SUBIR =================================================================================== -->
+
+	<div class="row center-block animated fadeIn" id="subir-inicio">
+		<nav role="navigation"><a href="#principal"><i class="fa fa-arrow-circle-up fa-2x" id="subir-inicio-icon"></i></a></nav>
+	</div>
+
+
+
+
 	<!-- PIEs =================================================================================== -->
 
 	<!-- <div class="footer ocultar_movil" id="sub_pie"></div>
@@ -223,6 +222,9 @@
 			Patrocinado por: <a href="http://www.piscinas7islas.com/" target="_blank"><img src="/images/logos/logo_piscinas7islas.jpg" alt=""></a>
 		</h6>
 	</div>
+
+
+
 
 
 
