--- a/views/siloes/show.ejs
+++ b/views/siloes/show.ejs
@@ -40,7 +40,7 @@
 													<h5>Capacidad: </h5>
 												</div>
 												<div class="col-md-6 col-sm-6 col-xs-6 alineacion_izda">
-													<h5><%= ensayos[index].capacidad %></h5>
+													<h5><%= (ensayos[index].capacidad).toFixed(2) %><small> m3</small></h5>
 												</div>
 
 												<div class="col-md-6 col-sm-6 col-xs-6 alineacion_dcha">
