--- a/public/stylesheets/pc.css
+++ b/public/stylesheets/pc.css
@@ -26,11 +26,9 @@
 
 
 	.panel {
-
 		border-radius: 1.5px;
-
-
 	}
+
 
 	.form-control {
 
@@ -181,13 +179,8 @@
 	}
 
 
-	/*.navbar-inverse .navbar-nav > li > a:active {
 
-		text-decoration: none;
-		color: #eb9837;
-		outline: 0;
 
-	}*/
 
 	/* ================================================================================================ */
 
@@ -255,12 +248,12 @@
 
 	/* BOTON subir-inicio ************************************************************* */
 
-/*	#subir-inicio {
+	#subir-inicio {
 		width: auto;
 		position: fixed;
-		bottom: 10px;
-		right: 15px;
-		visibility: visible;
+		bottom: 4px;
+		right: 7px;
+		visibility: hidden;
 		z-index: 1000;
 
 
@@ -276,7 +269,9 @@
 		-o-transition: all 0.3s;
 		-webkit-transition: all 0.3s;
 		transition: all 0.3s;
-	} */
+
+	}
+
 
 
 	/* ********* RALENTIZA TRANSICIONES  ************************************************** */
@@ -1093,7 +1088,7 @@
 		height: 40px;
 		position: fixed;
 		bottom: 0px;
- 		background-color: rgba(46, 46, 46, 0.9);
+ 		background-color: rgba(46, 46, 46, 0.95);
 		/*background-color: transparent;*/
 		color: #A4A4A4;
 		border-top:	1px solid #424242;
