--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -177,3 +177,40 @@
 
 
     }
+
+
+
+    /* ========================================================================================================== */
+    /* ========================================================================================================== */
+    /* ========================================================================================================== */
+    /* CONTROL FORMATO PANTALLA TABLET ========================================================================== */
+    /* ========================================================================================================== */
+    /* ========================================================================================================== */
+    /* ========================================================================================================== */
+
+
+@media only screen and (max-width: 1023px) {  			/* tablet */
+    @media only screen and (min-width: 768px) {  			/* tablet */
+
+
+        .margen_superior {
+
+            margin-top: 90px;
+        }
+
+
+
+
+        /* MENU INICIO ======================================= */
+        #menu-inicio {
+            font-size: 12px;
+        }
+
+
+
+
+
+
+
+    }
+}
