--- a/views/vasos/_form.ejs
+++ b/views/vasos/_form.ejs
@@ -1,5 +1,5 @@
 
-<div class="container animated fadeIn" id="vaso_form">
+<div class="container-fluid animated fadeIn" id="vaso_form">
 
     <h4><img src="/images/vasos.png" alt="" /> Vaso</h4>
     <br>
