--- a/views/vasos/index.ejs
+++ b/views/vasos/index.ejs
@@ -1,5 +1,5 @@
 
-    <div class="container animated animated-fast fadeIn margen_superior" id="vasos">
+    <div class="container-fluid animated animated-fast fadeIn margen_superior" id="vasos">
 
         <h4><img src="/images/vasos.png" alt="" /> Vasos</h4>
 
