--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,5 +1,5 @@
 
-<div class="container animated animated-fast fadeIn margen_superior" id="partes_index">
+<div class="container-fluid animated animated-fast fadeIn margen_superior" id="partes_index">
 
 	<h4><img src="/images/partes3.png" alt="" /> Partes de Lecturas</h4>
 
@@ -27,20 +27,16 @@
 	<div class="panel panel-default table-responsive">
 
 		<table class="table table-striped table-hover">
+
 			<thead>
 				<tr>
-<!--					<th>Centro</th> -->
-
 					<th class="text-center">Fecha</th>
 					<th class="text-center">Parte</th>
 					<th class="text-center">User</th>
 					<th class="text-center">Centro</th>
 					<th class="text-center">Revisado</th>
-<!--					<th>Proveedor</th>
-					<th>Motivo</th> -->
 				</tr>
 			</thead>
-
 
 
 			<tbody>
