--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,5 +1,5 @@
 
-    <div class="container animated animated-fast fadeIn margen_superior" id="usuarios">
+    <div class="container-fluid animated animated-fast fadeIn margen_superior" id="usuarios">
 
         <h4><img src="/images/user.png" alt="" /> Usuarios</h4>
 
